creating ChangeLog
2003-04-08 David Malcolm

	* cong-document.c, cong-document.h, cong-span-text-editor.c, global.h, popup.c, save.c, tree.c

	More transient window fixes

	* cong-menus.c

	Fixed typo in comment

	* cong-plugin.c, new_doc.c

	Fixed warnings
	
2003-04-04 David Malcolm

	* cong-dispspec-registry.c, cong-dispspec-registry.h, cong-document.c, cong-error-dialog.c, cong-error-dialog.h, cong-error-file-open.c, cong-error-file-save.c, cong-error-tests.c, cong-location.c, cong-plugin.c, cong-plugin.h, cong-primary-window.c, global.h, main.c, new_doc.c, open.c, plugin-docbook.c, plugin-tests.c, popup.c

	Error dialogs and other transient windows now set up their parent windows more consistently; menu functionality moved from cong-primary-window.c and main.c to new file cong-menus.c
	
	* Makefile.am

	Added cong-menus.c
	
	* cong-menus.c

	Initial import
	
2003-04-03 David Malcolm

	* cong-document.c

	Ensure that all content is valid UTF-8 when the cong_document is constructed from the xml_doc

	* cong-error-dialog.c, cong-error-dialog.h

	Added optional bugzilla ID to the Unimplemented dialog

	* cong-primary-window.c, file.c, global.h, main.c, open.c, save.c

	Tell the window manager which window the fileselector dialogs have been spawned from

	* cong-source-view.c, xmledit.c

	Fix the sizing of the source view

	* plugin-docbook.c

	Set up the doctype declaration for created DocBook files
	
	
2003-04-02 David Malcolm

	* cong-document.c, cong-document.h, cong-location.c, global.h, cong-span-text-editor.c, cursor.c

	Improvements to navigation; doubleclick support on text 
 	
	* cong-editor-widget.c, cong-location.c, cong-span-text-editor.c, cursor.c, global.h, popup.c, select.c, xmldata.c, xmledit.c

	CongLocation and UTF-8 cleanup
	
2003-04-01 David Malcolm

	* cong-span-text-editor.c, cursor.c, global.h

	Usability improvements to cursor behaviour (see bug #109698)
